# ERPGram

./: .dockerignore  .env.example  .env.prod.example  .gitattributes  .gitignore  AGENTS.md  BACKLOG.md  CLAUDE.md  Caddyfile  DEPLOY.md  Dockerfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  manage.py  pyproject.toml  tailwind.config.js  tasks.ps1
.github/workflows/: ci.yml
apps/accounts/: admin.py  backends.py  forms.py  managers.py  models.py  permissions.py  services.py  signup.py  tokens.py  urls.py  views.py
apps/billing/: forms.py  models.py  services.py  urls.py  views.py
apps/comments/: models.py  services.py  urls.py  views.py
apps/core/: admin.py  db.py  domains.py  middleware.py  models.py  permissions.py  tenant.py
apps/manpower/: apps.py  forms.py  models.py  services.py  urls.py  views.py
apps/tenancy/: admin.py  forms.py  models.py  services.py  urls.py  views.py
apps/ui/: apps.py  context_processors.py  navigation.py  services.py  urls.py  views.py
config/: urls.py  wsgi.py
config/settings/: base.py  local.py  (+1 more)
docker/: entrypoint.prod.sh  entrypoint.sh  postgres-init.prod.sh  postgres-init.sql
templates/: auth_base.html  base.html  print_base.html  shell.html
tests/: conftest.py  factories.py  test_auth.py  test_comments.py  test_domains.py  test_icons.py  test_invoicing.py  test_language_switch.py  test_manpower.py  test_migration_helpers.py  test_permissions.py  test_placements.py  test_roles.py  test_template_hygiene.py  test_tenancy_crud.py  test_tenant_isolation.py  test_tenant_switch.py  test_ui.py
(+116 files in other folders)
